--- a/templates/basket/edit.html.twig
+++ b/templates/basket/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Basket{% endblock %}
+{% block title %}Modificar cesta{% endblock %}
 
 {% block body %}
     <h1>Edit Basket</h1>
