--- a/templates/basket/index.html.twig
+++ b/templates/basket/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Basket index{% endblock %}
+{% block title %}Minha Cesta{% endblock %}
 
 {% block body %}
     <h1>Basket index</h1>
