--- a/templates/basket/show.html.twig
+++ b/templates/basket/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Basket{% endblock %}
+{% block title %}Cesta{% endblock %}
 
 {% block body %}
     <h1>Basket</h1>
