--- a/templates/basket/user_basket.html.twig
+++ b/templates/basket/user_basket.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}Minha Cesta{% endblock %}
 
 {% block body %}
 	<link rel="stylesheet" href={{asset("css/basket.css")}}>
