--- a/templates/order/index.html.twig
+++ b/templates/order/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Order index{% endblock %}
+{% block title %}Encomendas{% endblock %}
 
 {% block body %}
 <link rel="stylesheet" href="{{ asset('css/order.css') }}">
