--- a/templates/registration/privacy_policy.html.twig
+++ b/templates/registration/privacy_policy.html.twig
@@ -59,7 +59,7 @@
         <li>Oposição a certos tratamentos dos seus dados</li>
     </ul>
     <p>
-        Para exercer seus direitos, entre em contato conosco através de: <a href="mailto:privacy@diasporacv.com">privacy@diasporacv.com</a>
+        Para exercer seus direitos, entre em contato conosco através de: <a href="mailto:falkon674@gmail.com">falkon674@gmail.com</a>
     </p>
 
     <h2>8. Cookies</h2>
