--- a/templates/user/edit.html.twig
+++ b/templates/user/edit.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit User{% endblock %}
+{% block title %}Modificar Dados Pessoais{% endblock %}
 
 {% block body %}
 {# css #}
