--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}{% endblock %}
+{% block title %}FalkonANK{% endblock %}
 
 {% block body %}
 	{# css #}
