--- a/templates/merchant/edit.html.twig
+++ b/templates/merchant/edit.html.twig
@@ -24,6 +24,7 @@
                             <br>
                             {{ form_row(form.swift, {'attr': {'class': 'form-control mb-3'}}) }}
                             <br>
+                            {{ form_row(form.nifManeger, {'attr': {'class': 'form-control mb-3'}}) }}
                             <div class="text-center">
                                 <button type="submit" class="btn btn-success px-5">
                                     {{ button_label|default('Atualizar') }}
