--- a/templates/product/show.html.twig
+++ b/templates/product/show.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Product{% endblock %}
+{% block title %}Artigo{% endblock %}
 
 {% block body %}
     {# css #}
