--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -6,11 +6,11 @@
 			{% block title %}FalkonAnk : Alimentation
 			{% endblock %}
 		</title>
-		{# <link
-		rel="icon" href="data:image/png+xml,<png xmlns=%22https://falkon.click/image/FalkonANK/logo-transparent-png.png%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>sf</text></png>"> #}
+		<link
+		rel="icon" href="data:image/png+xml,<png xmlns=%22https://falkon.click/image/FalkonANK/logo-transparent-png.png%22 viewBox=%220 0 128 128%22><text y=%221.2em%22 font-size=%2296%22>⚫️</text><text y=%221.3em%22 x=%220.2em%22 font-size=%2276%22 fill=%22%23fff%22>FAA</text></png>">
 
 		{# <link rel="icon" type="image/png" href="{{asset("image/FalkonANK/logo-transparent-png.png")}}"> #}
-		<link rel="icon" type="image/png" href="/image/FalkonANK/logo-transparent-png.png">
+		{# <link rel="icon" type="image/png" href="/image/FalkonANK/logo-transparent-png.png"> #}
 
 
 		{# bootstrap #}
