Ajout du link facebook

--- a/templates/layout/header.html.twig
+++ b/templates/layout/header.html.twig
@@ -85,6 +85,8 @@
 				<a class="insta" href="">
 					<i class="fab fa-instagram"></i>
 				</a>
+				<a class="link .facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info"><i class="fab fa-facebook-f"></i></a>
+        
 
 				<div class="busca">
 					<form class="d-flex" role="search" method="get" action="{{ path('product_search') }}">
