--- a/templates/contact/contact.html.twig
+++ b/templates/contact/contact.html.twig
@@ -37,14 +37,14 @@
             <div class="col-lg-6">
                 <h5 class="mb-3">Informações de Contato</h5>
                 <ul class="list-unstyled">
-                    <li><i class="fas fa-map-marker-alt text-primary me-2"></i>Paris, France</li>
+                    <li><i class="fas fa-map-marker-alt text-primary me-2"></i>60 rue François 1er 75008 Paris, France</li>
                     {# <li><i class="fas fa-phone text-primary me-2"></i>+33 782697764</li> #}
                     <li><i class="fas fa-envelope text-primary me-2"></i>falkon674@gmail.com</li>
                 </ul>
 
                 <h5 class="mt-4 mb-3">Siga-nos</h5>
                 <div>
-                    <a href="#" class="btn btn-outline-primary btn-sm me-2"><i class="fab fa-facebook-f"></i></a>
+                    <a href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info" class="btn btn-outline-primary btn-sm me-2"><i class="fab fa-facebook-f"></i></a>
                     {# <a href="#" class="btn btn-outline-info btn-sm me-2"><i class="fab fa-twitter"></i></a> #}
                     <a href="#" class="btn btn-outline-danger btn-sm me-2"><i class="fab fa-instagram"></i></a>
                     {# <a href="#" class="btn btn-outline-primary btn-sm"><i class="fab fa-linkedin"></i></a> #}
