--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -19,7 +19,7 @@
       </ul>
       
       <ul class="i_footear">
-        <a class="link .facebook" href=""><i class="fab fa-facebook-f"></i></a>
+        <a class="link .facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info"><i class="fab fa-facebook-f"></i></a>
         <a class="link .intagram" href=""><i class="fab fa-instagram"></i></a>
         <p class="text-center text-white">© 2024 FalkonANK Alimentason</p>
       </ul>      
