--- a/public/css/home.css
+++ b/public/css/home.css
@@ -46,7 +46,7 @@ header p button {
 .div-header {
   background-color: rgba(247, 0, 255, 0.463);
   border-radius: 30px;
-  padding: 1rem;
+  padding: 0.3rem;
 }
 
 /* --------------------- Cards Produits --------------------- */
@@ -144,7 +144,7 @@ header p button {
   }
 
   .div-header h1 {
-    font-size: 1.2rem;
+    font-size: 0.2rem;
   }
 
   header p button {
@@ -183,7 +183,7 @@ header p button {
 
 
 .div-header h1 {
-  font-size: 1.4rem;
+  font-size: 0.2rem;
 }
 
 header p button {
@@ -303,6 +303,7 @@ header p button {
 .div-header {
 	overflow: hidden;
 	background-color: #f0f0f02a; /* facultatif */
+  margin-top: 0%;
 }
 
 .scrolling-text {
@@ -311,7 +312,8 @@ header p button {
 	width: 100%;
 	position: relative;
   background-color: rgba(255, 255, 255, 0.502);
-  margin-bottom: 1%;
+  margin-top: 0%;
+  margin-bottom: 0.2%;
 }
 
 .ads-wrapper {
@@ -343,6 +345,7 @@ header p button {
   width: auto;            /* garder la largeur proportionnelle */
   object-fit: contain;    /* l’image s’adapte sans être déformée */
   margin: 0 auto;         /* centrer horizontalement */
+  margin-top: 0%;
 }
 
 
