Ajout de l'actualisation de image logo

--- a/templates/stripe/index.html.twig
+++ b/templates/stripe/index.html.twig
@@ -15,6 +15,7 @@
 					(<strong>{{customerEmail}}</strong>).
 					<small>Se não encontrar, verifique sua pasta de spam ou lixo eletrônico 😉</small>
 				</p>
+				<a href="{{ path('app_user_orders') }}" class="btn btn-success mt-3">Suas compras</a>
 			</div>
 		{% else %}
 			<div class="alert alert-warning text-center">
