Ajout de l'actualisation de button Nos lojas

--- a/templates/stripe/index.html.twig
+++ b/templates/stripe/index.html.twig
@@ -26,7 +26,7 @@
 				<p><a href="{{path('contact_nous')}}"><strong> * Contacto</strong></a></p>
 			</div>
 		{% endif %}
-		<a href="{{ path('app_home_page') }}" class="btn btn-primary mt-3">Voltar a Loja !</a>
+		<a href="{{ path('app_home_page') }}" class="btn btn-dark mt-3">Voltar a Loja !</a>
 		{% if status != 'success' %}
 			<a href="{{ path('user_basket') }}" class="btn btn-secondary mt-3 text-warning">Tentar novamente o pagamento</a>
 
