--- a/templates/home_page/index.html.twig
+++ b/templates/home_page/index.html.twig
@@ -32,7 +32,7 @@
 						{% endif %}
 					{% endfor %}
 				</select>
-				<a href="{{ path('app_shop_all') }}" class="btn btn-primary">
+				<a href="{{ path('app_shop_all') }}" class="btn btn-dark">
 					<span>Nos Lojas</span>
 				</a>
 				{#-----------------------Carousel Controls------------------------------------------------------- #}
