Ajout de l'actualisation de footear

--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -23,6 +23,9 @@
 					<li class="nav-item">
 						<a href="{{path('app_about_page')}}" class="nav-link px-2 text-white">Sobre nos</a>
 					</li>
+					<li class="nav-item">
+						<a href="{{path('privacy_policy')}}" class="nav-link px-2 text-white">Política</a>
+					</li>
 				</ul>
 
 				<ul class="i_footear">
