Ajout de l'actualisation2 de footear

--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -29,15 +29,30 @@
 				</ul>
 
 				<ul class="i_footear">
-					<a class="link .facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info">
+					<a class="link facebook" href="https://www.facebook.com/profile.php?id=61577545040892&sk=about_privacy_and_legal_info" target="_blank" style="display: inline-flex; align-items: center; justify-content: center;
+														          width: 36px; height: 36px; text-decoration: none;
+														          border: 2px solid #1877F2; border-radius: 50%;
+														          background-color: #ffffff; color: #1877F2;
+														          font-size: 18px; transition: background-color 0.3s, color 0.3s;">
+
 						<i class="fab fa-facebook-f"></i>
 					</a>
-          {# <br> #}
+
+					{# <br> #}
 					{# <a class="link .intagram" href=""><i class="fab fa-instagram"></i></a> #}
-					<a href="/downloads/imuhotepuvideos/app-imuhotepu-videos.apk" download style="display: inline-flex; align-items: center; text-decoration: none;">
-						<img class="logo" src="{{ asset('image/icon/appstore.png') }}" alt="Logo Imuhotepu" style="width: 33px; height: 33px; margin-right: 8px;">
+					<a href="/downloads/imuhotepuvideos/app-imuhotepu-videos.apk" download style="display: inline-flex; align-items: center; text-decoration: none;
+																					          border: 2px solid #4CAF50; border-radius: 8px; padding: 6px 10px;
+																					          background-color: #f9fff9; color: #333; transition: 0.3s;">
+
+						<img class="logo" src="{{ asset('image/icon/appstore.png') }}" alt="Logo Imuhotepu" style="width: 25px; height: 25px; margin-right: 8px;">
+						<span style="font-weight: 500;">Download APK</span>
 					</a>
-					<p class="text-center text-white">© 2025 FalkonANK Alimentason</p>
+
+					<p class="text-center text-white" style="display: flex; align-items: center; justify-content: center; gap: 8px;">
+						<img class="logo" src="{{ asset('image/FalkonANK/logo-transparent-png.png') }}" alt="Logo FalkonANK" style="height: 20px;">
+						© 2025 FalkonANK Alimentason
+					</p>
+
 				</ul>
 			</footer>
 
