Ajout de l'actualisation3 de footear

--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -45,7 +45,7 @@
 																					          background-color: #f9fff9; color: #333; transition: 0.3s;">
 
 						<img class="logo" src="{{ asset('image/icon/appstore.png') }}" alt="Logo Imuhotepu" style="width: 25px; height: 25px; margin-right: 8px;">
-						<span style="font-weight: 500;">Download APK</span>
+						<br><span style="font-weight: 500;">Download APK</span>
 					</a>
 
 					<p class="text-center text-white" style="display: flex; align-items: center; justify-content: center; gap: 8px;">
