ajout de meta google

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="FalkonANK : plateforme de mise en relation entre la diaspora capverdienne et les commerçants locaux au Cap-Vert. Achetez et faites livrer des produits à vos proches.">
-		<meta name="keywords" content="FalkonANK, Cap-Vert, diaspora, commerçants locaux, livraison, produits alimentaires">
+		<meta name="description" content="FalkonANK : Plataforma de ligação entre a diáspora cabo-verdiana e os comerciantes locais em Cabo Verde. Compre e envie produtos aos seus entes queridos.">
+		<meta name="keywords" content="FalkonANK,Falkonank,FALKONANK, falkon.click, Cap-Vert, diaspora, commerçants locaux, livraison, produits alimentaires">
 		<meta name="author" content="Imuhotepu">
 		<title>
 			{% block title %}FalkonAnk : Alimentation
@@ -14,6 +14,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		{% block meta_description %}
+			<meta name="google-site-verification" content="131Ifqdekq1okvgsNF_-YPO_x8BPb_htV9l75RLm9Pk" />
 			<meta name="description" lang="fr" content="FalkonANK : plateforme de mise en relation entre la diaspora capverdienne et les commerçants locaux au Cap-Vert. Achetez et faites livrer des produits à vos proches.">
 			<meta name="description" lang="pt" content="FalkonANK: plataforma de ligação entre a diáspora cabo-verdiana e os comerciantes locais em Cabo Verde. Compre e faça entregar produtos aos seus entes queridos.">
 			<meta name="description" lang="en" content="FalkonANK: connecting the Cape Verdean diaspora with local merchants in Cape Verde. Purchase and have products delivered to your loved ones.">
