actulisation de base.html.twig -  infos meta

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="FalkonANK : Plataforma de ligação entre a diáspora cabo-verdiana e os comerciantes locais em Cabo Verde. Compre e envie produtos aos seus entes queridos.">
+		<meta name="description" content="FalkonANK : Plataforma de ligação entre a diáspora cabo-verdiana e os comerciantes locais em Cabo Verde. Compre e faça entregar produtos aos seus entes queridos.">
 		<meta name="keywords" content="FalkonANK,Falkonank,FALKONANK, falkon.click, Cap-Vert, diaspora, commerçants locaux, livraison, produits alimentaires">
 		<meta name="author" content="Imuhotepu">
 		<title>
