actulisation de adminControllers -  logo

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -7,11 +7,9 @@
 		<meta name="keywords" content="FalkonANK,Falkonank,FALKONANK, falkon.click, Cap-Vert, diaspora, commerçants locaux, livraison, produits alimentaires">
 		<meta name="author" content="Imuhotepu">
 		<title>
-			{% block title %}FalkonAnk : Alimentation
+			{% block title %}FalkonANK – Plateforme de la diaspora capverdienne
 			{% endblock %}
 		</title>
-
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 		{% block meta_description %}
 			<meta name="google-site-verification" content="131Ifqdekq1okvgsNF_-YPO_x8BPb_htV9l75RLm9Pk" />
