--- a/templates/user/show.html.twig
+++ b/templates/user/show.html.twig
@@ -8,6 +8,9 @@
 
 	<div class="container-fluid mt-4">
 		<div class="row justify-content-center">
+			<a href="{{path('app_home_page')}}">
+				<button type="button" class="btn btn-dark">Voltar a loja</button>
+			</a>
 			<div class="col-lg-8 col-md-10 col-sm-12">
 				<h3 class="mb-4">Dados Pessoais</h3>
 
