--- a/templates/layout/footear.html.twig
+++ b/templates/layout/footear.html.twig
@@ -24,6 +24,9 @@
 					<li class="nav-item">
 						<a href="{{ path('privacy_policy') }}" class="nav-link px-2 text-white">Política</a>
 					</li>
+					<li class="nav-item">
+						<a href="{{ path('app_presentation') }}" class="nav-link px-2 text-white">Imuhotepu-videos</a>
+					</li>
 				</ul>
 
 				<!-- Ícones sociais e links -->
